--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
    <title>シグマ塔完全攻略ページ</title>
+   <style type="text/css"> 
+  img {
+      width: 50vw;
+  }
+  </style>
    <script type="text/javascript">
       var imglist = new Array(
          "o1.png",
